meta-lead-ads-package/main/default/objects/Meta_Form__c/Meta_Form__c.object-meta.xml
<CustomObject>
    <label>Meta Form</label>
    <nameField>
        <label>Meta Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meta Form</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>