meta-lead-ads-package/main/default/objects/Meta_Form__c/fields/Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Form_ID__c</fullName>
    <externalId>true</externalId>
    <label>Form ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>