meta-lead-ads-package/main/default/objects/Meta_Form__c/fields/Is_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Is_Mapped__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mapped</label>
    <type>Checkbox</type>
</CustomField>