meta-lead-ads-package/main/default/objects/Meta_Form__c/fields/Page__c.field-meta.xml
<CustomField>
    <fullName>Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page (Lookup)</label>
    <referenceTo>Meta_Page__c</referenceTo>
    <relationshipLabel>Meta Form</relationshipLabel>
    <relationshipName>Meta_Form</relationshipName>
    <type>Lookup</type>
</CustomField>