meta-lead-ads-package/main/default/objects/Meta_Form__c/fields/Questions_JSON__c.field-meta.xml
<CustomField>
    <fullName>Questions_JSON__c</fullName>
    <label>Questions JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>